{
    "name": "GameInput",
    "maps": [
        {
            "name": "RotatePlanet",
            "id": "773c897e-fc11-4b77-9885-af65ec80c2f8",
            "actions": [
                {
                    "name": "Rotate",
                    "type": "Value",
                    "id": "2a6096e8-129d-4c75-af12-15d9cf00714d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RotatePlayer2",
                    "type": "Value",
                    "id": "2c03dbbd-d25b-440c-85f2-368dd21e2a00",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "c765a62e-2854-439f-b613-fbd43b1a2e1c",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "76880ae8-f792-496d-a972-090136b98787",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Controller1",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "bbee1ff4-2f45-46b6-b15b-3a14f0dc9685",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Controller1",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "PlayerMovement",
            "id": "d3494e24-74dd-420b-8d17-5639e7b8aa68",
            "actions": [
                {
                    "name": "MoveLeftRight",
                    "type": "Value",
                    "id": "7e73e632-baa4-4ab5-b497-e09ee7e85ad3",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "e33debfd-6788-44f7-981b-dff0999f0bb8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveLeftRightPlayer2",
                    "type": "Value",
                    "id": "301323eb-7984-48d7-a45d-7a9022452a1f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "JumpPlayer2",
                    "type": "Button",
                    "id": "f86a0e97-7299-443a-8d81-f63fba3e043c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "0dbdaf5d-9aca-4a73-b56f-0f2067e50309",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeftRight",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "dd4f167b-bea1-4ab9-9a57-dc0a41107dbd",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Controller2",
                    "action": "MoveLeftRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "8657acd8-901f-448f-aaf6-ff3f1262c96f",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Controller2",
                    "action": "MoveLeftRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "2D Vector",
                    "id": "ae47590d-a744-4d68-8406-9cb72a375cfe",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeftRightPlayer2",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "9a4f25ac-b108-4db7-9754-a248be442ccb",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeftRightPlayer2",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "c3e52ac0-a06d-4124-94fe-de5ba61cf5a5",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeftRightPlayer2",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "22a2919f-f70d-40ac-85b0-664c1dfbe732",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Controller2",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b4a85dab-ce50-430c-bffc-5a8760540eca",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "JumpPlayer2",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Camera",
            "id": "6d6e4692-c55b-41a2-b83d-1b32628f5ab0",
            "actions": [
                {
                    "name": "Zoom",
                    "type": "Button",
                    "id": "fca68d28-d868-40e2-a000-7d6e10b228ad",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ZoomPlayer2",
                    "type": "Button",
                    "id": "07bf6b4c-3b9d-48ac-81df-b35040e04d0e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "eaf6958e-bb82-4a2d-a4cd-9dc6b8084cbf",
                    "path": "<Gamepad>/rightStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9fbc2d2b-5d0c-48f0-8794-088e9016fcdc",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ZoomPlayer2",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Controller1",
            "bindingGroup": "Controller1",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Controller2",
            "bindingGroup": "Controller2",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}